# task_pomodoro_python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: build_windows.bat  build_windows.py
src/: __init__.py  main.py
src/core/: __init__.py  app.py  notifications.py  state.py  timer.py
src/ui/: __init__.py  theme.py
src/ui/pages/: __init__.py  base_page.py  resting_page.py  starting_page.py  working_page.py
src/ui/widgets/: __init__.py  button.py  checkbox.py  clock_icon.py  dialog.py  toast.py
src/utils/: __init__.py  formatting.py
tests/: test_formatting.py
